Get new weather icons and update the icon number in json

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url("./button-animation.scss");
 
 body {
   margin: 0;
@@ -18,12 +19,19 @@ dialog {
   position: relative;
 }
 
+.weather-splash {
+  img {
+    max-width: 600px;
+  }
+}
+
 .bg-container {
   box-sizing: border-box;
-  padding: 50px 10%;
-  padding-bottom: 100px;
+
   z-index: 2;
   position: absolute;
+  background: linear-gradient(hsl(273, 75%, 66%), hsl(235, 62%, 73%));
+  // background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
   background-color: black;
   background-size: cover;
   background-position: center;
@@ -53,136 +61,7 @@ dialog {
     }
   }
 
-  .button-container {
-    grid-area: button;
-    position: relative;
-    align-self: end;
-    justify-self: end;
-  }
-
-  button.move {
-    appearance: none;
-    background-color: rgba(255, 255, 255, 0.9);
-    color: white;
-    border: none;
-    border-radius: 30px;
-    height: 50px;
-    width: 130px;
-    cursor: pointer;
-  }
-
-  button.move::before {
-    font-family: "Lato", sans-serif;
-    content: "MORE";
-    display: block;
-    position: absolute;
-    font-size: 1rem;
-    letter-spacing: 2px;
-    font-weight: 300;
-    top: 15px;
-    left: 20px;
-    color: black;
-  }
-
-  button.move::after {
-    content: "";
-    display: block;
-    position: absolute;
-    right: 5px;
-    top: 5px;
-    height: 40px;
-    width: 40px;
-    border-radius: 30px;
-    background-color: black;
-    background-image: url(./assets/more-icon.svg);
-    background-position: center;
-    background-size: contain;
-  }
-
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr min-content min-content;
-  grid-template-areas:
-    "quote blank"
-    "greeting greeting"
-    "time time"
-    "location button";
-
-  .bg-info {
-    text-transform: uppercase;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    font-size: 0.7rem;
-    font-weight: 300;
-    opacity: 80%;
-    color: white;
-    a {
-      color: white;
-      text-decoration: none;
-    }
-  }
-  .quote {
-    grid-area: quote;
-    color: white;
-    font-size: 1.5rem;
-    font-weight: 300;
-    font-style: italic;
-    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    .author {
-      margin-top: 10px;
-      display: block;
-      font-weight: 500;
-    }
-  }
-  .greeting-container {
-    grid-area: greeting;
-    align-self: end;
-    display: flex;
-    align-items: flex-start;
-    position: relative;
-    left: -20px;
-
-    .condition-icon {
-      position: relative;
-      width: 30px;
-      height: 30px;
-      display: inline-block;
-      background-position: center;
-      background-size: cover;
-      margin-right: 5px;
-    }
-  }
-  .greeting {
-    display: inline-block;
-    text-transform: uppercase;
-    font-weight: 300;
-    letter-spacing: 2px;
-    font-size: 1.5rem;
-    word-spacing: 3px;
-    color: white;
-    opacity: 80%;
-    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  }
-  .time {
-    grid-area: time;
-    font-size: calc(30px + 10svw);
-    font-weight: 900;
-    align-self: flex-start;
-    color: white;
-    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  }
-  .location {
-    grid-area: location;
-    text-transform: uppercase;
-    font-weight: 500;
-    font-size: 1.5rem;
-    letter-spacing: 2px;
-    word-spacing: 3px;
-    color: white;
-    opacity: 80%;
-    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  }
 }
 
 .hidden-content {
